--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "@react-navigation/native-stack": "^6.7.0",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
+    "expo-dev-client": "~1.0.1",
     "expo-status-bar": "~1.3.0",
     "firebase": "^8.10.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-date-picker": "^4.2.5",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "@react-native-community/datetimepicker": "6.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
