--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-button": "^3.0.1",
     "react-native-date-picker": "^4.2.5",
     "react-native-link": "^4.1.0",
     "react-native-onboarding-swiper": "^1.2.0",
