--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-native-date-picker": "^4.2.5",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "expo-location": "~14.2.2",
+    "react-native-maps": "0.30.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
