--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "6.1.2",
+    "@react-native-community/geolocation": "^2.1.0",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-dev-client": "~1.0.1",
+    "expo-location": "~14.2.2",
     "expo-status-bar": "~1.3.0",
     "firebase": "^8.10.1",
     "moment": "^2.29.4",
@@ -24,11 +26,12 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-date-picker": "^4.2.5",
+    "react-native-geolocation-service": "^5.3.0",
+    "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-maps": "0.30.2",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7",
-    "expo-location": "~14.2.2",
-    "react-native-maps": "0.30.2"
+    "react-native-web": "0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
