--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-screens": "3.11.1",
     "react-native-swiper": "1.6.0",
     "react-native-web": "0.17.7",
-    "expo-font": "~10.1.0"
+    "expo-font": "~10.1.0",
+    "expo-app-loading": "~2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
