--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-community/datetimepicker": "6.1.2",
     "@react-native-community/geolocation": "^2.1.0",
     "@react-navigation/bottom-tabs": "^6.3.2",
