Entypo and MaterialCommunityIcons

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,21 @@
 {
     "cSpell.words": [
+        "Accom",
+        "accomdetails",
+        "addaccom",
+        "addattraction",
+        "addflight",
+        "addtrip",
+        "attractiondetails",
+        "chooseaddtype",
+        "editaccom",
+        "editattraction",
+        "editflight",
+        "edittrip",
         "Entypo",
-        "Ionicons"
+        "flightdetails",
+        "googleautocomplete",
+        "Ionicons",
+        "tripdetails"
     ]
 }
