--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,17 +2,20 @@
     "cSpell.words": [
         "Accom",
         "accomdetails",
+        "accomodation",
         "addaccom",
         "addattraction",
         "addflight",
         "addtrip",
         "attractiondetails",
         "chooseaddtype",
+        "datetimepicker",
         "editaccom",
         "editattraction",
         "editflight",
         "edittrip",
         "Entypo",
+        "firestore",
         "flightdetails",
         "googleautocomplete",
         "Ionicons",
