--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "addtrip",
         "attractiondetails",
         "chooseaddtype",
+        "Coordiates",
         "datetimepicker",
         "editaccom",
         "editattraction",
