Update app json

--- a/app.json
+++ b/app.json
@@ -7,9 +7,9 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/Launch_Screen_Dark_Mode.png",
       "resizeMode": "contain",
-      "backgroundColor": "#FFFFFF"
+      "backgroundColor": "#00266B"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
