--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-native-screens": "3.11.1",
     "react-native-swiper": "1.6.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "expo-splash-screen": "~0.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
