--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "expo-dev-client": "~1.0.1",
     "expo-font": "~10.1.0",
     "expo-location": "~14.2.2",
+    "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "firebase": "^8.10.1",
+    "formik": "^2.2.9",
     "material-ui-community-icons": "^0.15.0",
     "moment": "^2.29.4",
     "react": "17.0.2",
@@ -40,8 +42,7 @@
     "react-native-screens": "3.11.1",
     "react-native-swiper": "1.6.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "0.17.7",
-    "expo-splash-screen": "~0.15.1"
+    "react-native-web": "0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
