--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
         "googleautocomplete",
         "Ionicons",
         "midnightblue",
+        "phantomgray",
         "Pressable",
         "tripdetails"
     ]
