--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "axios": "^0.27.2",
-    "expo": "~45.0.0",
+    "expo": "^1.0.0",
     "expo-app-loading": "~2.0.0",
     "expo-dev-client": "~1.0.1",
     "expo-font": "~10.1.0",
     "expo-location": "~14.2.2",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "^0.15.6",
     "firebase": "^8.10.0",
     "formik": "^2.2.9",
     "material-ui-community-icons": "^0.15.0",
